# Mist-rs

./: .gitignore  Cargo.toml  README-rust.md
.github/workflows/: ci.yml
Scripts/: package_gui_linux.sh  package_gui_macos.sh  package_gui_windows.ps1
core/: Cargo.toml
core/src/: installers.rs  lib.rs
core/src/helpers/: chunklist.rs  codesigner.rs  disk_image.rs  disk_image_creator.rs  download_manager.rs  file_manager.rs  installer.rs  iso.rs  launchd.rs  log_manager.rs  mod.rs  sparkle.rs  sparkle_updater.rs  task_manager.rs  updater.rs  validator.rs
core/src/model/: app_icon.rs  architecture.rs  chunk.rs  chunklist.rs  export_list_type.rs  firmware.rs  firmware_alert_type.rs  hardware.rs  installer.rs  installer_volume.rs  log_entry.rs  log_level.rs  mist_error.rs  mist_task.rs  mist_task_section.rs  mist_task_state.rs  mist_task_type.rs  mod.rs  progress_alert_type.rs  refresh_state.rs  settings_installer_cache_alert_type.rs
core/tests/: chunklist.rs  disk_image.rs  download.rs  file_ops.rs  model_roundtrip.rs  task_manager.rs
docs/: migration.md
gui/: Cargo.toml
gui/src/: content_view.rs  log_view.rs  main.rs  settings_view.rs
mist-rs/: Cargo.toml
mist-rs/src/: lib.rs  main.rs
mist-rs/src/helpers/: codesigner.rs  disk_image_creator.rs  download_manager.rs  file_manager.rs  mod.rs
mist-rs/src/model/: catalog.rs  catalog_seed_type.rs  catalog_type.rs  download_type.rs  installer_alert_type.rs  installer_export_type.rs  installer_sheet_type.rs  mod.rs  package.rs
mist-rs/tests/: disk_image.rs  download.rs  file_ops.rs  mist_tests.rs
