[package]
name = "mist-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
fs_extra = "1"
futures-util = "0.3"
ring = "0.16"

[dev-dependencies]
tempfile = "3"
mockito = "0.32"
