[package]
name = "mist-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
mist-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
fs_extra = "1"

[dev-dependencies]
tempfile = "3"
